👌(layout) fix course detail vertical rhythm and font size
Primary group contents in course detail could have incorrect vertical
rhythm (lacking of marging) when content is plain text (without
paragraph). Also these content font size was a little bit too small.

Here we just fix this minor issues in course detail Sass component.

--- a/src/frontend/scss/components/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/components/templates/courses/cms/_course_detail.scss
@@ -15,6 +15,7 @@
 
   &__row {
     @include detail-row;
+    font-size: 1rem;
   }
 
   &__title {
@@ -79,6 +80,14 @@
     @if r-theme-val(course-detail, primary-group-title-color) {
       #{$detail-selector}__title {
         color: r-theme-val(course-detail, primary-group-title-color);
+      }
+    }
+
+    #{$detail-selector}__row {
+      padding-bottom: 1rem;
+
+      & > p:last-of-type {
+        margin-bottom: 0;
       }
     }
 
